--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="memory_JS.js" type="text/javascript"></script>
-        <link href="newcss.css" rel="stylesheet" type="text/css"/> 
+        <link href="memory.css" rel="stylesheet" type="text/css"/> 
     </head>
     <body>
         <div>
